[gd_scene load_steps=28 format=3 uid="uid://ckefah1p3faiy"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_2002g"]
[ext_resource type="Texture2D" uid="uid://csvkq3y7bm1fe" path="res://Assets/Sprites/1 Ooze/Ooze_attack.png" id="2_bratd"]
[ext_resource type="Texture2D" uid="uid://d3p2v5x4hxyea" path="res://Assets/Sprites/1 Ooze/Ooze_walk.png" id="3_5b0gg"]
[ext_resource type="Texture2D" uid="uid://w5mf7q2x4oop" path="res://Assets/Sprites/1 Ooze/Ooze_hurt.png" id="4_da4t2"]
[ext_resource type="Texture2D" uid="uid://c2qlqby75qcjt" path="res://Assets/Sprites/1 Ooze/Ooze_idle.png" id="5_jrxk1"]
[ext_resource type="Texture2D" uid="uid://4nh2btb4ftph" path="res://Assets/Sprites/1 Ooze/Ooze_death.png" id="6_alucd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8w6w5"]
atlas = ExtResource("2_bratd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrvan"]
atlas = ExtResource("2_bratd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gjuw"]
atlas = ExtResource("2_bratd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ggc5"]
atlas = ExtResource("2_bratd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48k4"]
atlas = ExtResource("3_5b0gg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ce7"]
atlas = ExtResource("3_5b0gg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nowxr"]
atlas = ExtResource("3_5b0gg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfmhs"]
atlas = ExtResource("3_5b0gg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hagqt"]
atlas = ExtResource("4_da4t2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwq85"]
atlas = ExtResource("4_da4t2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uekmf"]
atlas = ExtResource("5_jrxk1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2fkb"]
atlas = ExtResource("5_jrxk1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_itray"]
atlas = ExtResource("5_jrxk1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cb1b"]
atlas = ExtResource("5_jrxk1")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8dsn"]
atlas = ExtResource("6_alucd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c82uy"]
atlas = ExtResource("6_alucd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_agt0o"]
atlas = ExtResource("6_alucd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7hf1"]
atlas = ExtResource("6_alucd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ncgp5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w6w5")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_lrvan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gjuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ggc5")
}],
"loop": false,
"name": &"angreifen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ce7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nowxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfmhs")
}],
"loop": true,
"name": &"laufen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hagqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwq85")
}],
"loop": false,
"name": &"schaden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uekmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2fkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itray")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cb1b")
}],
"loop": true,
"name": &"stehen",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8dsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c82uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agt0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7hf1")
}],
"loop": false,
"name": &"sterben",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bratd"]
size = Vector2(27, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2002g"]
size = Vector2(54, 25)

[node name="Slime" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_2002g")

[node name="SlimeSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ncgp5")
animation = &"angreifen"

[node name="SlimeKollision" type="CollisionShape2D" parent="."]
position = Vector2(7.5, 10)
shape = SubResource("RectangleShape2D_bratd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 11.5)
shape = SubResource("RectangleShape2D_2002g")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
